--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "webpack-cli": "^3.1.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
+    "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
+    "@fortawesome/react-fontawesome": "0.1.0-11",
+    "classnames": "^2.2.6",
     "express": "^4.16.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
