--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "redux-actions": "^2.6.1",
     "redux-form": "^7.4.2",
     "redux-thunk": "^2.3.0",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1"
   }
 }
