--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^1.0.0",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.18.3",
     "style-loader": "^0.22.1",
@@ -43,6 +44,7 @@
     "redux-form": "^7.4.2",
     "redux-thunk": "^2.3.0",
     "socket.io": "^2.1.1",
-    "socket.io-client": "^2.1.1"
+    "socket.io-client": "^2.1.1",
+    "soundmanager2": "^2.97.20170602"
   }
 }
