--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "classnames": "^2.2.6",
     "express": "^4.16.3",
     "react": "^16.4.2",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
