--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "jest": {
+    "testPathIgnorePatterns": ["__assets__"]
+  },
   "scripts": {
+    "test": "jest",
     "webpack": "webpack",
     "watch": "webpack --watch",
     "start": "nodemon --exec babel-node server/index.js",
@@ -31,6 +35,8 @@
     "eslint-plugin-react": "^7.11.1",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^23.5.0",
+    "jest-cli": "^23.5.0",
     "nodemon": "^1.18.3",
     "style-loader": "^0.22.1",
     "webpack": "^4.17.1",
